# rustaria

./: Cargo.toml
assets/: block_data.json  crafting_recipes.json  crafting_recipes_data.json  item_data.json
src/: camera.rs  inventory.rs  item_pickup.rs  main.rs  mouse_position.rs  player.rs  ui.rs  world.rs
src/inventory/: crafting.rs  item.rs
src/player/: block_interaction.rs  hotbar.rs  movement.rs
src/ui/: crafting.rs  hotbar.rs  inventory.rs  mode_manager.rs
src/world/: chunk.rs
src/world/chunk/: block.rs  block_structure.rs
src/world/chunk/block_structure/: tree_generator.rs
