[package]
name = "rustaria"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
glam = "0.29"
bevy = "0.15.0"
bevy_dylib = "0.15.0-rc.2"
bevy_rapier2d = "0.28.0"
noise = "0.9.0"
serde_json = "1.0.133"
serde = "1.0.216"
rand = "0.8.5"